--- a/popup.html
+++ b/popup.html
@@ -1,31 +1,33 @@
 <html>
-	<head>
-		<script src='jquery-3.1.1.min.js'></script>
-		<link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
-		<link rel="stylesheet" href="style.css" type="text/css" />
+<head>
+	<script src='jquery-3.1.1.min.js'></script>
+	<script src="clipboard.js-master/dist/clipboard.min.js"></script>
+	<link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
+	<link rel="stylesheet" href="style.css" type="text/css" />
 
-	</head>
+</head>
 
-	<body>
+<body>
 
-		<h1>Easy Link Access</h1>
-		<form action="popup.js" id="add-link">
-			<label for="link-name">Link Title</label>
-			<input type="text" name="link-name">
-			<label for="link-url">Link Url</label>
-			<input type="text" name="link-url">
-			<input type="submit" name="Save" value="Save">
-		</form>
+	<h1>Easy Link Access</h1>
+	<form action="popup.js" id="add-link">
+		<label for="link-name">Link Title</label>
+		<input type="text" name="link-name">
+		<label for="link-url">Link Url</label>
+		<input type="text" name="link-url">
+		<input type="submit" name="Save" value="Save">
+	</form>
 
-		<h2>Your EasyLinks</h2>
-		<div id=listarea>
-			
-			<ul id="my-list">
-				
-			</ul>
-		</div>
-		<script src="popup.js"></script>
-	</body>
+	<h2>Your EasyLinks</h2>
+
+	<div id=listarea>
+
+		<ul id="my-list">
+
+		</ul>
+	</div>
+	<script src="popup.js"></script>
+</body>
 </html>
 <a
 
