--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
 <head>
 	<script src='jquery-3.1.1.min.js'></script>
 	<script src="clipboard.js-master/dist/clipboard.min.js"></script>
+	<script src=></script>
 	<link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="style.css" type="text/css" />
 
@@ -12,11 +13,12 @@
 
 		<h1>Easy Link Access</h1>
 		<div id='new-link-div'><button id='new-link-button'>Add Link</button></div>
+		<div class="error"></div>
 		<form action="popup.js" id="add-link">
 			<label for="link-name">Link Title</label>
-			<input type="text" name="link-name">
+			<input type="text" name="link-name" required/>
 			<label for="link-url">Link Url</label>
-			<input type="text" name="link-url">
+			<input type="url" name="link-url" required/>
 			<input type="submit" name="Save" value="Save">
 		</form>
 
