--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-	<script src='jquery-3.1.1.min.js'></script>
-	<script src="clipboard.js-master/dist/clipboard.min.js"></script>
-	<script src=></script>
-	<link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
+	<script src='vendor/jquery-3.1.1.min.js'></script>
+	<script src=>"vendor/jquery.validate.min.js"</script>
+	<script src="vendor/clipboard.js-master/dist/clipboard.min.js"></script>
+	<link rel="stylesheet" href="vendor/font-awesome-4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="style.css" type="text/css" />
 
 </head>
@@ -18,8 +18,9 @@
 			<label for="link-name">Link Title</label>
 			<input type="text" name="link-name" required/>
 			<label for="link-url">Link Url</label>
-			<input type="url" name="link-url" required/>
-			<input type="submit" name="Save" value="Save">
+			<input type="text" name="link-url" required/>
+			<input id=save-submit type="submit" name="Save" value="Save">
+			<input id=edit-submit type="submit" name="Edit" value="Edit">
 		</form>
 
 		<div id=listarea>
