--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 	<script src='vendor/jquery-3.1.1.min.js'></script>
 	<!-- <script src=>"vendor/jquery.validate.min.js"</script> -->
 	<script src='vendor/jquery-validation-1.15.0/dist/jquery.validate.min.js'></script>
-	<script src="vendor/clipboard.js-master/dist/clipboard.min.js"></script>
+	<script src="vendor/clipboard.min.js"></script>
 	<link rel="stylesheet" href="vendor/font-awesome-4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="style.css" type="text/css" />
 
