Adjust colors; remove copy icon from link name

--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,7 @@
 			<label for="link-name">Link Title</label>
 			<input type="text" name="link-name"/>
 			<label for="link-url">Link Url</label>
-			<input type="url" name="link-url" value="http://"/>
+			<input type="url" name="link-url" value="https://"/>
 			<input type="submit" name="Save" value="Save">
 		</form>
 
