--- a/popup.html
+++ b/popup.html
@@ -16,18 +16,26 @@
 		<div id='new-link-div'><button id='new-link-button'>Add Link</button></div>
 		<div class="error"></div>
 		<form action="popup.js" id="add-link">
-			<label for="link-name">Link Title</label>
-			<input type="text" name="link-name"/>
-			<label for="link-url">Link Url</label>
-			<input type="url" name="link-url" value="https://"/>
-			<input type="submit" name="Save" value="Save">
+			<div>
+				<label for="link-name">Link Title</label>
+				<input type="text" name="link-name"/>
+			</div>
+			<div>
+				<label for="link-url">Link Url</label>
+				<input type="url" name="link-url" value="https://"/>
+			</div>
+				<input type="submit" name="Save" value="Save">
 		</form>
 
 		<form action="popup.js" id="edit-link">
-			<label for="link-name">Link Title</label>
-			<input type="text" name="link-name"/>
-			<label for="link-url">Link Url</label>
-			<input type="text" name="link-url"/>
+			<div>
+				<label for="link-name">Link Title</label>
+				<input type="text" name="link-name"/>
+			</div>
+			<div>
+				<label for="link-url">Link Url</label>
+				<input type="text" name="link-url" value="http://"/>
+			</div>
 			<input type="submit" name="Edit" value="Edit">
 		</form>
 		
