Clean up code (comments, unused functions, extra files)

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,6 @@
 <html>
 <head>
 	<script src='vendor/jquery-3.1.1.min.js'></script>
-	<!-- <script src=>"vendor/jquery.validate.min.js"</script> -->
 	<script src='vendor/jquery-validation-1.15.0/dist/jquery.validate.min.js'></script>
 	<script src="vendor/clipboard.min.js"></script>
 	<link rel="stylesheet" href="vendor/font-awesome-4.6.3/css/font-awesome.min.css">
@@ -14,7 +13,7 @@
 
 		<h1>Easy Link Access</h1>
 		<div id='new-link-div'><button id='new-link-button'>Add Link</button></div>
-		<div class="error"></div>
+		<!-- <div class="error"></div> -->
 		<form action="popup.js" id="add-link">
 			<div>
 				<label for="link-name">Link Title</label>
