--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,7 @@
 			</div>
 			<div>
 				<label for="link-url">Link Url</label>
-				<input type="url" name="link-url" value="https://"/>
+				<input type="url" name="link-url"/>
 			</div>
 				<input type="submit" name="Save" value="Save">
 		</form>
@@ -33,7 +33,7 @@
 			</div>
 			<div>
 				<label for="link-url">Link Url</label>
-				<input type="text" name="link-url" value="http://"/>
+				<input type="text" name="link-url"/>
 			</div>
 			<input type="submit" name="Edit" value="Edit">
 		</form>
